src/App.css
/* ... */
/******************** STAFF MANAGEMENT TAB HEADER CSS *******************/

.staff-management-tab-header,.development-tab-header{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background: #f4f3f3;
    padding-inline: 10px;
    padding-top: 10px;
    height: 130px;
    width: 100%;
    padding-right: 30px;



}

.tab-title-display{
    display: flex;
    justify-content: space-between;
    margin-bottom: 50px;
}

.tab-title-display h1{

    background-color: black;
    color: white;
    padding: 5px;
    padding-left: 2px;
    padding-right: 30px;
    display: inline-block;
    font-size: 2em;
    height: fit-content;


}

/******************** STAFF MANAGEMENT TAB BODY CSS *******************/

.staff-management-tab-body,.development-tab-body{

    border-top: 2px solid #000000;
    position: relative;
    height: 100%;


}


/******************** STAFF MANAGEMENT DEPARTMENT TAB LIST CSS *******************/
.staff-management-department-tab-list,.development-type-tab-list{
    display: flex;
    flex-direction: row;
    gap: 0;
    position: absolute;
    bottom: 100%;
    padding-left: 5px;


}
.staff-management-department-tab-list li button,.development-type-tab-list li button{
    border: 2px solid black;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    padding: 5px;
    border-bottom: none;

}

/******************** STAFF DETAILS LIST CSS *******************/
.main-management-container,.main-development-container{

    height: 100%;
    background: black;
    padding-top: 1px;
}

.staff-Details{
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding-inline: 100px;
    margin-top: 10px;
    gap: 10px;
    /*background-color: #ea2e2e;*/
    @media (max-width: 1000px) {
        padding-inline: 40px;
        flex-wrap: wrap;


    }





}


/******************** STAFF MEMBERS BOX LIST CSS *******************/

.members-list-view{
    flex-grow: 1;
}

.members-list-box{
    height: 300px;
    width: 400px;
    display: flex;
    flex-direction: column;
    @media(max-width: 1000px){
        height: 200px;
        width: 100%;
        flex-grow: 1;
    }


}
.members-list{
    background: #e2e2dd60;
    overflow-y: auto;
    height:100%;
    flex:1;
    width: 100%;
    border: 2px solid #e2e2dd90;
    border-top: none;

}
.members-list-box-heading{
    color: white;
    display: flex;
    justify-content: center;
    width: 100%;
    padding-block: 5px;

    border: 2px solid #e2e2dd90;


}
.member-list-names{
    padding-block: 2px;
    border-bottom:2px solid #e2e2dd90;
    width: 100%;
    display: flex;
    padding: 0;

}

/*.member-list-names:last-child{*/
/*    border-bottom: none;*/

/*}*/

.member-list-names button{
    flex: 1;
    height: 100%;
    width: 100%;
    border: none;
    margin: 0;
    padding: 0;
    text-align: left;
    padding-left: 10px;

}


.member-list-names:not(.selected){


    color: white;


}


.member-list-names:not(.selected):hover {

    background: rgba(213, 204, 218, 0.5);
    color: black;


}


/******************** MEMBERS STATS BOX CSS *******************/

.members-stats-box{
    min-width:400px ;
    height: fit-content;

    display: flex;
    flex-direction: column;
    justify-content: center;
    gap:10px;
    align-self: center;
    /*background-color: #75f2f6;*/
    @media (max-width: 1000px) {
        min-width:100% ;

    }


}
/******************** SKILL PROGRESS BAR CSS *******************/

.skill-progress-bars{
    width: 100%;
    display: flex;
    flex-direction: column;
    gap:5px;


}
.progress-bar-label{
    white-space: nowrap;
    padding-left: 10px;
}
.life-label{
    color: white;
    padding-block: 7px;
}

.base-ap-label{
    font-size: 10px;

}
.base-ap-value{
    font-size: 25px;
}
.base-ap{
    color: white;
    background: #b90005;
    padding-right:15px;
    padding-left:5px ;
}
.life{
    flex: 1;
}
.life-and-base-ap{
    display: flex;
    gap:5px;
}


/******************** PROFILE PICTURE CSS *******************/

.member-profile-image-box{
    max-width:fit-content;
    min-width:fit-content;
    max-height: fit-content;
    min-height: fit-content;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /*margin-top: 40px;*/
    align-self: flex-end;

    /*background-color: #34da34;*/
    @media(max-width: 1000px){
        justify-content: flex-end;

    }



}

.member-profile-img{

    @media (max-width: 1000px) {

        width: 200px;

    }
}

/******************** DEPARTMENT TAB NAME AND LEVEL AND HEAD COUNT*******************/

.department-name-and-level-and-head-count{
    margin-top: 30px;
    margin-left: 10px;
    display: flex;
    justify-content: space-between;
    padding-inline: 30px;
    color: white;
    font-size: 30px;

    @media(max-width: 1000px) {
        flex-direction: column;
        font-size: 30px;
    }
}


.level-and-member-count{
    display: flex;
    gap:30px;
    @media (max-width: 1000px) {
        font-size: 20px;

    }

}

.member-count-img{
    height: 40px;
    @media (max-width: 1000px) {
        height: 30px;
    }
}

.member-count{
    display: flex;
    gap:5px;
}

/******************** OPERATIONS TO PERFORM ON STAFF MEMBERS*******************/

.staff-operations{
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-top: 20px;
    gap:20px;
}

.staff-operations button{
    padding: 5px;
    padding-inline: 10px;

}

.transfer-buttons li button{
    background-color: #02c602;
    margin-bottom: 10px;
    width: 100%;
    text-align: left;
    padding-inline: 10px;
    box-shadow: -5px 5px #037a03;


}

.transfer-buttons li button:disabled{
    cursor: not-allowed;
    background-color: #087108;
    box-shadow: none;

}

.kick-out-button{
    background-color: #d11010;
    color: white;
    height: fit-content;
    box-shadow: -5px 5px #870404;

}
/* ... */

